// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`step 0 readDir should list files and directories 1`] = `
Array [
  Object {
    "name": "Bart_Simpson.png",
    "type": "File",
  },
  Object {
    "name": "Father",
    "type": "Dir",
  },
  Object {
    "name": "Lisa_Simpson.png",
    "type": "File",
  },
  Object {
    "name": "Maggie_Simpson.png",
    "type": "File",
  },
  Object {
    "name": "Mother",
    "type": "Dir",
  },
]
`;

exports[`step 0 should query hello 1`] = `
Object {
  "data": Object {
    "hello": "Hello World!",
  },
}
`;

exports[`step 0 should query hello nodeconf 1`] = `
Object {
  "data": Object {
    "hello": "Hello NodeConf!",
  },
}
`;
